# sample

./: backtest_strategies.ipynb  bloomberg_data.py  bunch_backtests_monthly.ipynb  daily model vs trailing returns.ipynb  go_to_get_data.ipynb  lead_lag.ipynb  module_practice.ipynb  pyproject.toml  requirements.txt  transformations.py  visuals.py  wings.py
Outputs/: credit_er_3x_index_daily.csv  credit_er_index_daily.csv  credit_fund_estimated_index_daily.csv  credit_returns.csv  csv_data.csv  csv_data_transformations.csv  daily_credit_ml.csv  data_transformations.csv  modified_data.csv  ohlc_er_index_monthly.csv  ohlc_er_index_quarterly.csv
Raw Data/: Detailed Prompt- auto backtesting.docx  cad ig returns and spreads.csv  cleaned_cad_sprds_predict_final.xlsx  spx_trender.csv
cad_sprds_predict_project/: predict_cad_sprds matplot.ipynb  predict_cad_sprds.ipynb
html_outputs/: cad_ig_er_calc_index_report.html  credit_fund_estimated_index_report.html  levered_er_index_report.html
older_notebooks/: daily_cad_ig_ml.ipynb  daily_data.ipynb  daily_data_returns_predict.ipynb  er_indicies_creation.ipynb  forward_returns_sprds.ipynb  monthly_backtest.ipynb  sprd_prediction_monthly.ipynb  spx_trender.ipynb
xlwings/: wing_test.xlsx  wings.ipynb
